Update 7.11 Account Editior
Added feature to edit accounts
Added feature to delete account
Accounts Collection Array was migrated to List
Added Account Status

--- a/AppData/WindowsFormsApp1/SocialGrammer.csproj
+++ b/AppData/WindowsFormsApp1/SocialGrammer.csproj
@@ -157,5 +157,14 @@
   <ItemGroup>
     <None Include="Resources\Technical1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ellipse 2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\error.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\working.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
